Fixes animals staying on top of buttons...
Depending on the animation, the
animal might overlap the controls.

--- a/basico.css
+++ b/basico.css
@@ -72,6 +72,7 @@ body {
   top: 50%;
   margin-top: -30px;
   height: 60px;
+  z-index: 100;
 }
 
 .item {
